--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.16.4",
     "fastapi>=0.116.1",
+    "python-slugify>=8.0.4",
     "sqlmodel>=0.0.24",
     "uvicorn[standard]>=0.35.0",
 ]
