--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.16.4",
+    "bcrypt>=4.3.0",
     "fastapi>=0.116.1",
+    "pyjwt>=2.10.1",
     "python-slugify>=8.0.4",
     "sqlmodel>=0.0.24",
     "uvicorn[standard]>=0.35.0",
